test/corpus/unified_diff.txt
==================
single file single hunk
==================

Preamble heading line
--- a/file.txt
+++ b/file.txt
@@ -1,2 +1,3 @@ section title
 line 1
-line 2
+line 2 updated
+line 3
\ No newline at end of file

---

(source_file
  (blank_line)
  (preamble_line)
  (file_patch
    (from_file_line)
    (to_file_line)
    (hunk
      (hunk_header)
      (context_line)
      (deletion_line)
      (addition_line)
      (addition_line)
      (note_line))))

==================
multiple file patches
==================

--- a/one.txt
+++ b/one.txt
@@ -1 +1 @@
-old
+new
--- a/two.txt
+++ b/two.txt
@@ -1,0 +1,2 @@
+x
+y

---

(source_file
  (blank_line)
  (file_patch
    (from_file_line)
    (to_file_line)
    (hunk
      (hunk_header)
      (deletion_line)
      (addition_line)))
  (file_patch
    (from_file_line)
    (to_file_line)
    (hunk
      (hunk_header)
      (addition_line)
      (addition_line))))